--- a/homework/homework_8/homework_8.tex
+++ b/homework/homework_8/homework_8.tex
@@ -111,14 +111,12 @@ Prove the following propositions. Format your proof so each step of the proof is
 \begin{prf}
 	\phantom{ }
 
-	Suppose that $p|ab$. 
+	Suppose that $p\mid ab$. 
 	
 	Then $px = ab$ for some integer $x$.
 
 	Then $\text{sign}(a) \text{sign}(p) |p|x = |a|b 
-	\implies |p|y = |a|b$ where $y$ is the integer
-
-	$\text{sign}(a)\text{sign}(p)x$.
+	\implies |p|y = |a|b$ where $y$ is the integer $\text{sign}(a)\text{sign}(p)x$.
 
 	% For the sake simplicity, assume $a$, $b$ and $p$ are positive.
 
@@ -143,7 +141,7 @@ Prove the following propositions. Format your proof so each step of the proof is
 	Additionally, because $p$ is prime, $|a|$ is either a
 	multiple of $|p|$ or only shares the trivial divisor $1$.
 
-	In the first case, $|p|||a| \implies p|a$, so assume $\text{gcd}(|a|,|p|) = 1$.
+	In the first case, $|p|\mid|a| \implies p \mid a$, so assume $\text{gcd}(|a|,|p|) = 1$.
 
 	Then $|a|k + |p|l = 1$.
 
@@ -151,9 +149,9 @@ Prove the following propositions. Format your proof so each step of the proof is
 
 	Subbing in for $|a|b$: $|p|yk + b|p|l = b \implies |p|(xk +pl) = b$.
 
-	So $|p||b$.
+	So $|p| \mid b$.
 	
-	Therefore $p|b$. 
+	Therefore $p \mid b$. 
 \end{prf}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
