slight changes to problem 2

--- a/homework/homework_10/homework_10.tex
+++ b/homework/homework_10/homework_10.tex
@@ -148,11 +148,15 @@
         \item 
         \phantom{ }
 
-        \noindent Suppose some function $f$ is injective.
+        \noindent Suppose some function $f$ is injective with a range of $B'$.
 
         \noindent Then, for all $n,m \in A$ where $n \neq m$, $f(n) \neq f(m)$.
 
-        \noindent Additionally, the inverse relation $f^{-1}$ 
+        \noindent Additionally, the inverse relation $f^{-1}$ can be restricted
+        to the domain $B'$ to yield the function $f^{-1}_\text{res}$. 
+        
+        \noindent This inverse function is trivial injective because
+        that's what it means to be a function.
         
         \noindent Consider each element $x \in X$. Because its unique, by definition
         of a set, $f(x)$ is also unique. 
